--- a/hosts.yml
+++ b/hosts.yml
@@ -4,7 +4,7 @@ deploymentservers:
     deployment1:
       ansible_host: 34.79.12.33
       ansible_port: 22
-      ansible_ssh_user: rg
+      ansible_ssh_user: it21906
   vars:
     ansible_python_interpreter: /usr/bin/python3
 database:
@@ -12,6 +12,6 @@ database:
     deployment1:
       ansible_host: 34.79.12.33
       ansible_port: 22
-      ansible_ssh_user: rg
+      ansible_ssh_user: it21906
   vars:
     ansible_python_interpreter: /usr/bin/python3
