--- a/playbooks/spring-project-install.yml
+++ b/playbooks/spring-project-install.yml
@@ -2,8 +2,8 @@
 - hosts: webserver
 
   vars:
-    app_dir: "{{user_dir}}/django-project"
-    git_repo_url: "https://github.com/tsadimas/django3-sampe-project.git"
+    app_dir: "{{user_dir}}/clone-springboot"
+    git_repo_url: "https://github.com/it21918/devops_spring"
     git_repo_branch: "main"
 
   tasks:
