--- a/playbooks/spring-project-install.yml
+++ b/playbooks/spring-project-install.yml
@@ -34,7 +34,7 @@
       line: "{{lookup('pipe', 'ssh-keyscan -t rsa github.com')}}"
       regexp: "^github\\.com"
 
-  - name: clone django project
+  - name: clone springboot project
     git:
       repo: "{{git_repo_url}}"
       version: "{{git_repo_branch}}"
@@ -43,17 +43,17 @@
       dest: "{{app_dir}}"
     changed_when: true
 
-  - name: copy env file
-    shell : "cp {{app_dir}}/myproject/myproject/.env.example {{app_dir}}/myproject/myproject/.env"
+#   - name: copy env file
+#     shell : "cp {{app_dir}}/myproject/myproject/.env.example {{app_dir}}/myproject/myproject/.env"
 
-  - name: populate  ~/.env
-    lineinfile:
-      dest: "{{app_dir}}/myproject/myproject/.env"
-      state: present
-      regexp: "^{{item.key}}="
-      line: "{{item.key}}='{{item.value}}'"
-    with_items:
-      - "{{django.env | dict2items}}"
+#   - name: populate  ~/.env
+#     lineinfile:
+#       dest: "{{app_dir}}/myproject/myproject/.env"
+#       state: present
+#       regexp: "^{{item.key}}="
+#       line: "{{item.key}}='{{item.value}}'"
+#     with_items:
+#       - "{{django.env | dict2items}}"
 
   
   - name: print ip
