--- a/playbooks/spring-project-install.yml
+++ b/playbooks/spring-project-install.yml
@@ -60,44 +60,44 @@
     debug:
       msg: "ALLOWED_HOSTS={{ansible_all_ipv4_addresses}}"
 
-  - name: add ip in django ALLOWED_HOSTS
-    lineinfile:
-      dest: "{{app_dir}}/myproject/myproject/settings.py"
-      regexp: "^ALLOWED_HOSTS ="
-      line: "ALLOWED_HOSTS = {{ansible_all_ipv4_addresses}}"
-      state: present
+#   - name: add ip in django ALLOWED_HOSTS
+#     lineinfile:
+#       dest: "{{app_dir}}/myproject/myproject/settings.py"
+#       regexp: "^ALLOWED_HOSTS ="
+#       line: "ALLOWED_HOSTS = {{ansible_all_ipv4_addresses}}"
+#       state: present
 
-  - name: install and activate virtual environment
-    block:
-    - name: setup virtual environment
-      pip:
-        requirements: "{{app_dir}}/requirements.txt"
-        virtualenv: "{{app_dir}}/myvenv"
-        virtualenv_python: python3
-    rescue:
-    - name: "APT - install misc packages"
-      apt:
-        name: [python3, python3-pip, python3-virtualenv, virtualenv]
-        update_cache: yes
-      become: yes
-      become_user: root
-      when: hostvars[inventory_hostname].ansible_distribution == 'Ubuntu'
-    always:
+#   - name: install and activate virtual environment
+#     block:
+#     - name: setup virtual environment
+#       pip:
+#         requirements: "{{app_dir}}/requirements.txt"
+#         virtualenv: "{{app_dir}}/myvenv"
+#         virtualenv_python: python3
+#     rescue:
+#     - name: "APT - install misc packages"
+#       apt:
+#         name: [python3, python3-pip, python3-virtualenv, virtualenv]
+#         update_cache: yes
+#       become: yes
+#       become_user: root
+#       when: hostvars[inventory_hostname].ansible_distribution == 'Ubuntu'
+#     always:
 
-    - name: setup virtual environment
-      pip:
-        requirements: "{{app_dir}}/requirements.txt"
-        virtualenv: "{{app_dir}}/myvenv"
-        virtualenv_python: python3
+#     - name: setup virtual environment
+#       pip:
+#         requirements: "{{app_dir}}/requirements.txt"
+#         virtualenv: "{{app_dir}}/myvenv"
+#         virtualenv_python: python3
 
-    - name: make migrations
-      django_manage:
-        command: "{{ item }}"
-        project_path: "{{app_dir}}/myproject"
-        virtualenv: "{{app_dir}}/myvenv"
-      with_items:
-        - makemigrations
-        - migrate
+#     - name: make migrations
+#       django_manage:
+#         command: "{{ item }}"
+#         project_path: "{{app_dir}}/myproject"
+#         virtualenv: "{{app_dir}}/myvenv"
+#       with_items:
+#         - makemigrations
+#         - migrate
 
     
 
