--- a/playbooks/spring-project-install.yml
+++ b/playbooks/spring-project-install.yml
@@ -61,6 +61,9 @@
       packages:
         - maven
         
+  - name: Go to project dir
+    shell: "cd clone-springboot" 
+        
   - name: create jar
     shell: "mvn install" 
 
