--- a/playbooks/mysql-database.yml
+++ b/playbooks/mysql-database.yml
@@ -56,7 +56,7 @@
       login_host: 'localhost'
       login_user: 'root'
       login_password: "{{mysql_root_password}}"
-      name: demo 
+      name: testdb 
       state: present
       
 
