--- a/playbooks/spring-project-install.yml
+++ b/playbooks/spring-project-install.yml
@@ -104,45 +104,45 @@
         name: nginx
         update_cache: yes
 
-    - name: copy nginx conf file
-      template:
-        src: ../files/nginx/demo.nginx.j2
-        dest: "/etc/nginx/sites-available/django"
+#     - name: copy nginx conf file
+#       template:
+#         src: ../files/nginx/demo.nginx.j2
+#         dest: "/etc/nginx/sites-available/django"
 
-    - name: copy nginx https conf file
-      template:
-        src: ../files/nginx/demo.https.nginx.j2
-        dest: "/etc/nginx/sites-available/djangossl"
+#     - name: copy nginx https conf file
+#       template:
+#         src: ../files/nginx/demo.https.nginx.j2
+#         dest: "/etc/nginx/sites-available/djangossl"
 
 
-    - name: copy certificates
-      copy:
-        src: "{{item}}"
-        dest: /etc/ssl/private/
-      with_items:
-        - ../files/certs/server.crt
-        - ../files/certs/server.key
+#     - name: copy certificates
+#       copy:
+#         src: "{{item}}"
+#         dest: /etc/ssl/private/
+#       with_items:
+#         - ../files/certs/server.crt
+#         - ../files/certs/server.key
       
   
-    - name: enable django site in nginx
-      file:
-        src: "/etc/nginx/sites-available/django"
-        dest: "/etc/nginx/sites-enabled/django"
-        state: link
-      notify: restart nginx
+#     - name: enable django site in nginx
+#       file:
+#         src: "/etc/nginx/sites-available/django"
+#         dest: "/etc/nginx/sites-enabled/django"
+#         state: link
+#       notify: restart nginx
 
-    - name: enable flaskssl site in nginx
-      file:
-        src: "/etc/nginx/sites-available/djangossl"
-        dest: "/etc/nginx/sites-enabled/djangossl"
-        state: link
-      notify: restart nginx
+#     - name: enable flaskssl site in nginx
+#       file:
+#         src: "/etc/nginx/sites-available/djangossl"
+#         dest: "/etc/nginx/sites-enabled/djangossl"
+#         state: link
+#       notify: restart nginx
 
-    - name: de-activate default nginx site
-      file:
-        path: /etc/nginx/sites-enabled/default
-        state: absent
-      notify: restart nginx
+#     - name: de-activate default nginx site
+#       file:
+#         path: /etc/nginx/sites-enabled/default
+#         state: absent
+#       notify: restart nginx
     
     become: yes
     become_user: root
