--- a/playbooks/spring-project-install.yml
+++ b/playbooks/spring-project-install.yml
@@ -97,6 +97,12 @@
       packages:
         - maven
         
+  - name: Install npm
+    shell: "sudo apt-get install nodejs"
+    
+  - name: Install angular cli
+    shell: "npm install -g @angular/cli"
+        
   - name: Go to angular project dir
     shell: "cd ~/clone-angular"
 
