--- a/playbooks/angular.yml
+++ b/playbooks/angular.yml
@@ -66,7 +66,7 @@
     shell: "cd ~/clone-angular" 
    
   - name: Install npm
-    shell: "npm install"
+    shell: "npm install -g npm@8.15.0"
       
   - name: Install Angular.js
     npm:
