--- a/playbooks/angular.yml
+++ b/playbooks/angular.yml
@@ -67,6 +67,7 @@
    
   - name: Install npm
     shell: "npm install"
+    update_cache: yes
     args:
       chdir: /home/it21906/clone-angular
       
