--- a/playbooks/angular.yml
+++ b/playbooks/angular.yml
@@ -80,6 +80,11 @@
       update_cache: yes
     become: yes
     become_user: root
+    
+  - name: disable warnings 
+    shell: ng config -g cli.warnings.versionMismatch false
+    args:
+      chdir: /home/it21906/clone-angular
       
   - name: build 
     shell: ng build — prod
