--- a/playbooks/angular.yml
+++ b/playbooks/angular.yml
@@ -86,11 +86,8 @@
     shell: ng build --prod 
     args:
       chdir: /home/it21906/clone-angular
-      
-  - name: deploy 
-    shell: ng build --prod 
-    args:
-      chdir: /home/it21906/clone-angular
+    become: yes
+    become_user: root
       
 #   sudo nano /etc/nginx/sites-available/angular_demo
 #  {<server_name> your_IP abcd.com www.abcd.com;root /home/username/React-counter-app/build;index index.html index.htm;location / {try_files $uri /index.html =404;}}
