--- a/playbooks/angular.yml
+++ b/playbooks/angular.yml
@@ -88,6 +88,14 @@
       chdir: /home/it21906/clone-angular
     become: yes
     become_user: root
+    
+  - name: Copy files to remote host
+    copy:
+      src: /home/it21906/clone-angular/dist
+      dest: /var/www/html
+      owner: www-data
+      group: www-data
+      mode: 0755
       
 #   sudo nano /etc/nginx/sites-available/angular_demo
 #  {<server_name> your_IP abcd.com www.abcd.com;root /home/username/React-counter-app/build;index index.html index.htm;location / {try_files $uri /index.html =404;}}
