--- a/playbooks/postgres.yml
+++ b/playbooks/postgres.yml
@@ -1,8 +1,13 @@
-- hosts: database
+---
+- hosts: deploymentjenkins
+  become: yes
+  
   roles:
-    - role: geerlingguy.postgresql
-      become: yes
+    - geerlingguy.postgresql
   tasks:
+
+    
+
     - name: change listen_addresses to '*'
       lineinfile:
         dest: /etc/postgresql/12/main/postgresql.conf
@@ -13,14 +18,51 @@
       become: yes
       notify:
         - restart postgresql
+
+    - name: "Create app database"
+      postgresql_db:
+        state: present
+        name: "myproject"
+      become: yes
+      become_user: postgres
+
+    - name: "Create db user"
+      postgresql_user:
+        state: present
+        name: "myprojectuser"
+        password: "password"
+      become: yes
+      become_user: postgres
+
+    - name: "Grant db user access to app db"
+      postgresql_privs:
+        type: database
+        database: "myproject"
+        roles: "myprojectuser"
+        grant_option: no
+        privs: all
+      become: yes
+      become_user: postgres
+    - name: clone django project
+      git:
+        repo: "https://github.com/it21998/db.git"
+        version: "main"
+        clone: yes
+        force: yes
+        dest: "/home/jenkins/db"
+      changed_when: true
+    - name: "Add some dummy data to our database"
+      become: true
+      become_user: postgres
+      shell: psql myproject < /home/jenkins/db/sqlfile.sql
   tags:
     - postgres
   vars:
     postgresql_databases:
-      - name: demodb
+      - name: myproject
     postgresql_users:
-      - name: demouser
-        password: pass123
+      - name: myprojectuser
+        password: password
     postgresql_locales:
       - 'en_US.UTF-8'
     postgresql_hba_entries:
@@ -29,3 +71,5 @@
       - { type: host, database: all, user: all, address: '127.0.0.1/32', auth_method: md5 }
       - { type: host, database: all, user: all, address: '0.0.0.0/0', auth_method: md5 }
       - { type: host, database: all, user: all, address: '::1/128', auth_method: md5 }
+
+    
