--- a/playbooks/django-project-install-adminSystem.yml
+++ b/playbooks/django-project-install-adminSystem.yml
@@ -2,9 +2,9 @@
 - hosts: deploymentjenkins
 
   vars:
-    app_dir: "{{user_dir}}/devopsAdmin"
+    app_dir: "{{user_dir}}/adminSystem"
     
-    git_repo_url: "https://github.com/it21998/devopsAdmin.git"
+    git_repo_url: "https://github.com/it21918/django_adminSystem.git"
     git_repo_branch: "main"
 
   tasks:
@@ -51,11 +51,11 @@
 
 
   - name: copy env file
-    shell : "cp {{app_dir}}/student_management/student_management/.env.example {{app_dir}}/student_management/student_management/.env"
+    shell : "cp {{app_dir}}/adminSystem/adminSystem/.env.example {{app_dir}}/adminSystem/adminSystem/.env"
 
   - name: populate  ~/.env
     lineinfile:
-      dest: "{{app_dir}}/student_management/student_management/.env"
+      dest: "{{app_dir}}/adminSystem/adminSystem/.env"
       state: present
       regexp: "^{{item.key}}="
       line: "{{item.key}}='{{item.value}}'"
@@ -73,7 +73,7 @@
 
   - name: add ip in django ALLOWED_HOSTS
     lineinfile:
-      dest: "{{app_dir}}/student_management/student_management/settings.py"
+      dest: "{{app_dir}}/adminSystem/adminSystem/settings.py"
       regexp: "^ALLOWED_HOSTS ="
       line: "ALLOWED_HOSTS = ['{{ipify_public_ip}}', 'localhost','127.0.1.1']"
       state: present
@@ -104,7 +104,7 @@
     - name: make migrations
       django_manage:
         command: "{{ item }}"
-        project_path: "{{app_dir}}/student_management"
+        project_path: "{{app_dir}}/adminSystem"
         virtualenv: "{{app_dir}}/myvenv"
       with_items:
         - collectstatic
