--- a/playbooks/postgres.yml
+++ b/playbooks/postgres.yml
@@ -37,24 +37,12 @@
     - name: "Grant db user access to app db"
       postgresql_privs:
         type: database
-        database: "myproject"
+        database: "postgresdb"
         roles: "myprojectuser"
         grant_option: no
         privs: all
       become: yes
       become_user: postgres
-    - name: clone django project
-      git:
-        repo: "https://github.com/it21998/db.git"
-        version: "main"
-        clone: yes
-        force: yes
-        dest: "/home/jenkins/db"
-      changed_when: true
-    - name: "Add some dummy data to our database"
-      become: true
-      become_user: postgres
-      shell: psql myproject < /home/jenkins/db/sqlfile.sql
   tags:
     - postgres
   vars:
