--- a/group_vars/deploymentservers.yml
+++ b/group_vars/deploymentservers.yml
@@ -2,22 +2,36 @@ user_dir: "/home/it21906"
 app_port: 8000
 app_user: it21906
 service:
-  workingdir: "{{user_dir}}/django-project/myproject"
-  execstart: "{{user_dir}}/django-project/myvenv/bin/gunicorn --access-logfile - --workers 3 --bind 0.0.0.0:8000 myproject.wsgi:application"
+#   workingdir: "{{user_dir}}/django-project/myproject"
+#   execstart: "{{user_dir}}/django-project/myvenv/bin/gunicorn --access-logfile - --workers 3 --bind 0.0.0.0:8000 myproject.wsgi:application"
+  workingdir: "{{user_dir}}/adminSystem"
+  execstart: "{{user_dir}}/adminSystem/myvenv/bin/gunicorn --access-logfile - --workers 3 --bind 0.0.0.0:8000 myproject.wsgi:application"
 
 djangoservice:
-  workingdir: "{{user_dir}}/django-project/myproject"
-  execstart: "{{user_dir}}/django-project/myvenv/bin/gunicorn --access-logfile - --workers 3 --bind 0.0.0.0:8000 myproject.wsgi:application"
+#   workingdir: "{{user_dir}}/django-project/myproject"
+#   execstart: "{{user_dir}}/django-project/myvenv/bin/gunicorn --access-logfile - --workers 3 --bind 0.0.0.0:8000 myproject.wsgi:application"
+  workingdir: "{{user_dir}}/adminSystem"
+  execstart: "{{user_dir}}/adminSystem/myvenv/bin/gunicorn --access-logfile - --workers 3 --bind 0.0.0.0:8000 myproject.wsgi:application"
 
 
 
+# app:
+#   env:
+#     SQLALCHEMY_DATABASE_URI: postgresql://demouser:pass123@db01/demodb
+#     SQLALCHEMY_TRACK_MODIFICATIONS: False
+#     SECRET_KEY: sfvgbrh212131
+
+# django:
+#   env:
+#     SECRET_KEY: 'sfvgbrh212131'
+#     DATABASE_URL: 'postgresql://demouser:pass123@20.111.47.135/demodb'
 app:
   env:
-    SQLALCHEMY_DATABASE_URI: postgresql://demouser:pass123@db01/demodb
+    SQLALCHEMY_DATABASE_URI: postgres://myprojectuser:password@localhost:/myproject
     SQLALCHEMY_TRACK_MODIFICATIONS: False
-    SECRET_KEY: sfvgbrh212131
+    SECRET_KEY: test123
 
 django:
   env:
-    SECRET_KEY: 'sfvgbrh212131'
-    DATABASE_URL: 'postgresql://demouser:pass123@20.111.47.135/demodb'
+    SECRET_KEY: test123
+    DATABASE_URL: postgres://myprojectuser:password@localhost:/myproject
