--- a/playbooks/mailhog.yml
+++ b/playbooks/mailhog.yml
@@ -3,6 +3,6 @@
     - role:  jebovic.mailhog
       become: yes
 
-  tasks:
-  - name: enable
-    shell : " /usr/local/bin/mailhog -api-bind-addr :8025 -ui-bind-addr :8025"
+#   tasks:
+#   - name: enable
+#     shell : " /usr/local/bin/mailhog -api-bind-addr :8025 -ui-bind-addr :8025"
