--- a/files/mailhog.service
+++ b/files/mailhog.service
@@ -2,7 +2,7 @@
 Description=MailHog service
 
 [Service]
-ExecStart=/usr/local/bin/mailhog  -api-bind-addr 127.0.0.1:8025  -ui-bind-addr 127.0.0.1:8025
+ExecStart=/usr/local/bin/mailhog  -api-bind-addr :8025  -ui-bind-addr :8025
 
 [Install]
 WantedBy=multi-user.target
