--- a/playbooks/django-adminSystem-docker.yml
+++ b/playbooks/django-adminSystem-docker.yml
@@ -1,10 +1,10 @@
 ---
-- hosts: deploymentdocker
+- hosts: deploymentservers
 
   vars:
-    app_dir: "{{user_dir}}/devopsAdmin"
-    user_dir: "/home/azureuser"
-    git_repo_url: "https://github.com/it21998/devopsAdmin.git"
+    app_dir: "{{user_dir}}/adminSystem"
+    user_dir: "/home/it21906"
+    git_repo_url: "https://github.com/it21918/django_adminSystem.git"
     git_repo_branch: "main"
 
   tasks:
@@ -51,11 +51,11 @@
 
 
   - name: copy env file
-    shell : "cp {{app_dir}}/student_management/student_management/.env.example {{app_dir}}/student_management/student_management/.env"
+    shell : "cp {{app_dir}}/adminSystem/adminSystem/.env.example {{app_dir}}/adminSystem/adminSystem/.env"
 
   - name: populate  ~/.env
     lineinfile:
-      dest: "{{app_dir}}/student_management/student_management/.env"
+      dest: "{{app_dir}}/adminSystem/adminSystem/.env"
       state: present
       regexp: "^{{item.key}}="
       line: "{{item.key}}='{{item.value}}'"
@@ -73,25 +73,25 @@
 
   - name: add ip in django ALLOWED_HOSTS
     lineinfile:
-      dest: "{{app_dir}}/student_management/student_management/settings.py"
+      dest: "{{app_dir}}/adminSystem/adminSystem/settings.py"
       regexp: "^ALLOWED_HOSTS ="
       line: "ALLOWED_HOSTS = ['{{ipify_public_ip}}', 'localhost','127.0.1.1']"
       state: present
 
-  - name: clone db project
-    git:
-      repo: "https://github.com/it21998/db.git"
-      version: "main"
-      clone: yes
-      force: yes
-      dest: "/home/azureuser/db"
+#   - name: clone db project
+#     git:
+#       repo: "https://github.com/it21998/db.git"
+#       version: "main"
+#       clone: yes
+#       force: yes
+#       dest: "/home/azureuser/db"
 
 
       
-    changed_when: true
-  - name: userresg
-    command: id
-    register: user_groups
+#     changed_when: true
+#   - name: userresg
+#     command: id
+#     register: user_groups
 
   - debug:
       msg: "Groups {{user_groups}}"
@@ -140,14 +140,10 @@
   - name: Run makemigrations on django
     command: docker-compose exec -T django python manage.py makemigrations
     args:
-      chdir: /home/azureuser/devopsAdmin
+      chdir: /home/it21906/adminSystem
 
   - name: Run migrate on django
     command: docker-compose exec -T django python manage.py migrate
     args:
-      chdir: /home/azureuser/devopsAdmin
+      chdir: /home/it21906/adminSystem
   
-  - name: Run sqlfile on db
-    command: docker-compose exec -T db psql -U myprojectuser myproject < /home/azureuser/db/sqlfile.sql
-    args:
-      chdir: /home/azureuser/devopsAdmin
