--- a/hosts.yml
+++ b/hosts.yml
@@ -10,7 +10,8 @@ deploymentservers:
 database:
   hosts:
     deployment1:
-      ansible_host: 20.126.72.123
+      #ansible_host: 20.126.72.123
+      ansible_host: 51.13.170.216
       ansible_port: 22
       ansible_ssh_user: it21906
   vars:
