--- a/playbooks/django-project-install-userSystem.yml
+++ b/playbooks/django-project-install-userSystem.yml
@@ -133,6 +133,7 @@
         state: started
         enabled: yes
       become: yes
+      notify: restart gunicorn
 
   - name: install and configure nginx
     block:
