--- a/playbooks/django-project-install-userSystem.yml
+++ b/playbooks/django-project-install-userSystem.yml
@@ -75,7 +75,7 @@
     lineinfile:
       dest: "{{app_dir}}/userSystem/userSystem/settings.py"
       regexp: "^ALLOWED_HOSTS ="
-      line: "ALLOWED_HOSTS = ['{{ipify_public_ip}}','127.0.1.1','localhost','10.3.0.4']"
+      line: "ALLOWED_HOSTS = ['{{ipify_public_ip}}','127.0.0.1','localhost']"
       state: present
 
   - name: install and activate virtual environment
